--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 </ul> -->
 
 <div class="container">
-  <h1> This application calls the GitHub API</h1>
+  <h1 style="text-align: center"> This application calls the GitHub API</h1>
   <br>
 
   <div class="jumbotron">
