Updated the package.json file and updated dependencies

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color: #81ac50c0;
+    background-color: #9ccfef;
 }
 
 
